# algoritmos3

./: .gitignore  README.md  consoladiscreta.txt  mejora de tiempos  tiempo mal
EdmondsKarp/.svn/: entries
EdmondsKarp2/: bfslistORI.py  caminoaumentante.py  convertidor.py  ejemplo2  ejemplo3  menosprimero
EdmondsKarp2/.svn/: all-wcprops
algoritmos/ciclicos/: ciclicos.py
algoritmos/codigos/: codigos.py  generacodigos.py
algoritmos/coloreo/: heuristicas.py  probando.py
algoritmos/corte/: networkcorte.py
algoritmos/dinic/: blocking.py  dinic.py  grafo.py  niveles.py  red.py
algoritmos/dinic-rust/: Cargo.toml
algoritmos/dinic-rust/src/: main.rs
algoritmos/edmonds-karp/: api.py  bfslist.py  bfslistORI.py  caminoaumentante.py  constants.py  convertidor.py  graph_reader.py  main.py  matrizcap.py  output_handler.py  protocols.py  vertex_display.py
algoritmos/edmonds-karp-c/: API.c  Makefile  examples  main.c  structures.h  vertex.c
algoritmos/edmonds-karp-letras/: api.py  bfslist.py  caminoaumentante.py  constants.py  graph_reader.py  main.py  matrizcap.py  output_handler.py  vertex_display.py
algoritmos/edmonds-karp-rust/: Cargo.toml  Makefile
algoritmos/edmonds-karp-rust/src/: main.rs
algoritmos/edmonds-karp2/: constants.py  ejemplo2listo  ejemplo3listo  ejemplo7  ejemplogiolisto  ejemploraro  main.py  matrizcap.py  ojalatermine  res1  res2  res5  res6  res7
algoritmos/hungarian/: hung.py  hungparaDiscreta2006.py
algoritmos/lab/: queue.c  (+2 more)
lab/: API.h  edge.c  edge.h  helper.c  helper.h  info.c  info.h  network.c  network.h  test.sh  vertex.h
(+120 files in other folders)
