[package]
name = "edmonds-karp-rust"
version = "0.1.0"
edition = "2021"
description = "Edmonds-Karp para flujo máximo (port de la versión C)"

[features]
default = []
parallel = ["dep:rayon"]

[dependencies]
# parallel: requiere Rust 1.80+ (rayon 1.11+). En Rust anterior, compilar sin --features parallel.
rayon = { version = "1.10", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[[bin]]
name = "main"
path = "src/main.rs"
